--- a/index.html
+++ b/index.html
@@ -120,8 +120,37 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+    </section>
 
-      <div class="bg-carousel"></div>
+    <!-- TRENDING MOVIE -->
+    <section class="trending-movie container">
+      <h2>Trending Movie</h2>
+      <!-- Slider main container -->
+      <div class="swiper">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper" id="trend-movie">
+          <!-- Slides -->
+          <!-- <a href="#" class="swiper-slide">
+            <img src="../image/test.jpg" alt="films1" />
+            <p>Transformers One</p>
+          </a> -->
+        </div>
+
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+      </div>
+    </section>
+
+    <!-- POPULAR MOVIE -->
+    <section class="popular-movie container">
+      <h2>Popular Movie</h2>
+      <div id="popular-movie">
+        <!-- <a href="#" class="movie-card">
+          <img src="../image/test.jpg" alt="film1" />
+          <p>Transformers One</p>
+        </a> -->
+      </div>
     </section>
 
     <!-- FOOTER -->
@@ -138,6 +167,10 @@
         <a href="#"><i class="fa-brands fa-github"></i></a>
       </div>
     </footer>
+
+    <!-- SWIPER -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
     <script type="module" src="./script/index.js"></script>
 
     <!-- BOOTSTRAP -->
