home_info_search_comments_finish

--- a/search.html
+++ b/search.html
@@ -29,7 +29,7 @@
       <nav class="nav">
         <div class="nav-container">
           <ul class="nav-links">
-            <li><a href="#">Trang chủ</a></li>
+            <li><a href="./index.html">Trang chủ</a></li>
             <li><a href="#">Truyền hình</a></li>
             <li><a href="#">Phim bộ</a></li>
             <li><a href="#">Anime</a></li>
@@ -71,6 +71,23 @@
 
       <div id="movies"></div>
     </main>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class="footer-logo">
+        <img src="../image/logo.png" alt="logo" />
+        <h5>Cinema</h5>
+      </div>
+      <div class="copyright">Copyright &copy; Phuc</div>
+      <div class="contact">
+        Contact:
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-github"></i></a>
+      </div>
+    </footer>
+
+    <script type="module" src="./script/onAuthStateChanged.js"></script>
 
     <script type="module" src="./script/search.js"></script>
   </body>
