--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <nav class="nav">
         <div class="nav-container">
           <ul class="nav-links">
-            <li><a href="#">Trang chủ</a></li>
+            <li><a href="./index.html">Trang chủ</a></li>
             <li><a href="#">Truyền hình</a></li>
             <li><a href="#">Phim bộ</a></li>
             <li><a href="#">Anime</a></li>
@@ -170,6 +170,8 @@
 
     <!-- SWIPER -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <script type="module" src="./script/onAuthStateChanged.js"></script>
 
     <script type="module" src="./script/index.js"></script>
 
