home_info_search_comments_fixed

--- a/info.html
+++ b/info.html
@@ -69,6 +69,7 @@
         <div class="banner-info-container">
           <h1 id="movie-title">Movie Title</h1>
           <p id="movie-description">Movie description goes here.</p>
+          <p id="movie-release-date">Release date:</p>
           <div class="btn_watch" id="btn_watch">
             <a
               href="#"
@@ -152,8 +153,25 @@
             </div>
           </div> -->
         </div>
+        <div class="load-more-container">
+          <button id="load-more-btn" class="load-more-btn">Load more</button>
+        </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer-logo">
+        <img src="../image/logo.png" alt="logo" />
+        <h5>Cinema</h5>
+      </div>
+      <div class="copyright">Copyright &copy; Phuc</div>
+      <div class="contact">
+        Contact:
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-github"></i></a>
+      </div>
+    </footer>
 
     <!-- SWIPER -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
