--- a/watch.html
+++ b/watch.html
@@ -1,11 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Watch Movie</title>
+    <link rel="icon" href="../image/logo.png" />
+
+    <!-- ICONS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link rel="stylesheet" href="./style/index.css" />
+
+    <link rel="stylesheet" href="./style/watch.css" />
+  </head>
+  <body>
+    <!-- HEADER -->
+    <header class="header">
+      <div class="logo">
+        <img src="../image/logo.png" alt="logo" />
+        Cinema
+      </div>
+      <nav class="nav">
+        <div class="nav-container">
+          <ul class="nav-links">
+            <li><a href="./index.html">Trang chủ</a></li>
+            <li><a href="#">Truyền hình</a></li>
+            <li><a href="#">Phim bộ</a></li>
+            <li><a href="#">Anime</a></li>
+            <li><a href="#">Chiếu rạp</a></li>
+            <li class="dropdown">
+              <a href="#">Xem thêm <i class="fa-solid fa-caret-down"></i></a>
+              <ul class="dropdown-content">
+                <li><a href="#">Trực tiếp</a></li>
+                <li><a href="#">Thể thao</a></li>
+                <li><a href="#">Giải trí</a></li>
+              </ul>
+            </li>
+          </ul>
+          <div class="icons" id="authSection">
+            <!-- Phần này sẽ được JavaScript điều khiển -->
+          </div>
+        </div>
+        <div class="menu-toggle">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </nav>
+    </header>
+
+    <footer class="footer">
+      <div class="footer-logo">
+        <img src="../image/logo.png" alt="logo" />
+        <h5>Cinema</h5>
+      </div>
+      <div class="copyright">Copyright &copy; Phuc</div>
+      <div class="contact">
+        Contact:
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-github"></i></a>
+      </div>
+    </footer>
+
+    <script type="module" src="./script/onAuthStateChanged.js"></script>
+
+    <script type="module" src="./script/watch.js"></script>
+  </body>
 </html>
