info_fixed_and_watch_finish

--- a/info.html
+++ b/info.html
@@ -80,12 +80,7 @@
               <i class="fa-solid fa-play"></i>
               Xem Trailer
             </a>
-            <a
-              href="#"
-              id="watch-now-btn"
-              class="btn_watch_now"
-              target="_blank"
-            >
+            <a href="#" id="watch-now-btn" class="btn_watch_now">
               <i class="fa-solid fa-play"></i>
               Xem ngay
             </a>
