--- a/watch.html
+++ b/watch.html
@@ -36,16 +36,16 @@
         <div class="nav-container">
           <ul class="nav-links">
             <li><a href="./index.html">Trang chủ</a></li>
-            <li><a href="#">Truyền hình</a></li>
-            <li><a href="#">Phim bộ</a></li>
-            <li><a href="#">Anime</a></li>
-            <li><a href="#">Chiếu rạp</a></li>
+            <li><a href="./comedy.html">Phim hài</a></li>
+            <li><a href="./chinese_movie.html">Phim Trung</a></li>
+            <li><a href="./horror.html">Kinh dị</a></li>
+            <li><a href="./movies.html">Chiếu rạp</a></li>
             <li class="dropdown">
               <a href="#">Xem thêm <i class="fa-solid fa-caret-down"></i></a>
               <ul class="dropdown-content">
-                <li><a href="#">Trực tiếp</a></li>
-                <li><a href="#">Thể thao</a></li>
-                <li><a href="#">Giải trí</a></li>
+                <li><a href="./cartoon.html">Hoạt hình</a></li>
+                <li><a href="./sport.html">Thể thao</a></li>
+                <li><a href="./kung_fu.html">Kung fu</a></li>
               </ul>
             </li>
           </ul>
