--- a/info.html
+++ b/info.html
@@ -84,6 +84,10 @@
               <i class="fa-solid fa-play"></i>
               Xem ngay
             </a>
+            <button id="favorite-btn" class="btn_favorite">
+              <i class="fa-regular fa-heart"></i>
+              Yêu thích
+            </button>
           </div>
         </div>
       </div>
