--- a/watch.html
+++ b/watch.html
@@ -68,6 +68,10 @@
           <p id="movie-title"></p>
           <p id="movie-description"></p>
           <p id="release-date"></p>
+          <button id="favorite-btn" class="btn_favorite">
+            <i class="fa-regular fa-heart"></i>
+            Yêu thích
+          </button>
         </div>
       </section>
 
