--- a/index.html
+++ b/index.html
@@ -153,6 +153,14 @@
       </div>
     </section>
 
+    <!-- MOVIEs COMING SOON -->
+    <section class="movies-coming-soon container">
+      <h2>Movies coming soon</h2>
+      <div id="movies-coming-soon">
+        <!-- JS hiển thị -->
+      </div>
+    </section>
+
     <!-- FOOTER -->
     <footer class="footer">
       <div class="footer-logo">
@@ -183,5 +191,3 @@
     ></script>
   </body>
 </html>
-<!-- admin thêm phim yeu thich theo danh gia
-user them lich xem phim, them phim yeu thich, danh gia phim -->
